# dogs_vs_cats

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  resnet_train.py  result.md
dogs_vs_cats/: README.md  config.yaml  dog_vs_cats.ipynb  requirements.txt  resnet_train.py
notebooks/: dog_vs_cats.ipynb
