[tool.poetry]
name = "dogs-vs-cats"
version = "0.1.0"
description = ""
authors = ["matsumoto257 <yuki.matsumoto@rakus-partners.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
torch = "^2.1.1"
torchvision = "^0.16.1"
torchaudio = "^2.1.1"
tqdm = "^4.66.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
